git push a lot of changes

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -60,6 +60,29 @@
      <Compile Include="Assets\Scripts\Whale.cs" />
      <Compile Include="Assets\Scripts\input.cs" />
      <Compile Include="Assets\Scripts\saturation.cs" />
+     <Compile Include="Assets\SoundManagerPro\Demo\DemoScripts\DemoPart1.cs" />
+     <Compile Include="Assets\SoundManagerPro\Demo\DemoScripts\DemoPart2.cs" />
+     <Compile Include="Assets\SoundManagerPro\Demo\DemoScripts\DemoPart3.cs" />
+     <Compile Include="Assets\SoundManagerPro\Demo\DemoScripts\ScriptWithEvents.cs" />
+     <Compile Include="Assets\SoundManagerPro\EditorHelper\EditorUpdateCheck.cs" />
+     <Compile Include="Assets\SoundManagerPro\Scripts\Classes\AudioSourcePro.cs" />
+     <Compile Include="Assets\SoundManagerPro\Scripts\Classes\AudioSubscription.cs" />
+     <Compile Include="Assets\SoundManagerPro\Scripts\Classes\ProxyEventAttribute.cs" />
+     <Compile Include="Assets\SoundManagerPro\Scripts\Classes\SFXGroup.cs" />
+     <Compile Include="Assets\SoundManagerPro\Scripts\Classes\SFXPoolInfo.cs" />
+     <Compile Include="Assets\SoundManagerPro\Scripts\Classes\SoundConnection.cs" />
+     <Compile Include="Assets\SoundManagerPro\Scripts\Classes\SoundPocket.cs" />
+     <Compile Include="Assets\SoundManagerPro\Scripts\Extensions\AudioSourceTools.cs" />
+     <Compile Include="Assets\SoundManagerPro\Scripts\Extensions\SoundManagerTools.cs" />
+     <Compile Include="Assets\SoundManagerPro\Scripts\Managers\Singleton.cs" />
+     <Compile Include="Assets\SoundManagerPro\Scripts\Managers\SoundManager.cs" />
+     <Compile Include="Assets\SoundManagerPro\Scripts\Managers\SoundManager_Editor.cs" />
+     <Compile Include="Assets\SoundManagerPro\Scripts\Managers\SoundManager_Essentials.cs" />
+     <Compile Include="Assets\SoundManagerPro\Scripts\Managers\SoundManager_Internal.cs" />
+     <Compile Include="Assets\SoundManagerPro\Scripts\Managers\SoundManager_SFX.cs" />
+     <Compile Include="Assets\SoundManagerPro\Scripts\Managers\SoundManager_SFX_Internal.cs" />
+     <Compile Include="Assets\SoundManagerPro\Scripts\Managers\SoundManager_Variables_Music.cs" />
+     <Compile Include="Assets\SoundManagerPro\Scripts\Managers\SoundManager_Variables_SFX.cs" />
      <None Include="Assets\DOTween\DOTween46.xml" />
      <None Include="Assets\DOTween\DOTween43.xml" />
      <None Include="Assets\DOTween\readme.txt" />
